--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,55 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
   <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Hello World!"
+          android:id="@+id/tv_title"
+          android:layout_width="match_parent"
+          android:layout_height="60dp"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintLeft_toLeftOf="parent"
+          android:background="#123abc"
+  />
+
+  <FrameLayout
+          android:id="@+id/frame_layout"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          app:layout_constraintTop_toBottomOf="@id/tv_title"
+          app:layout_constraintBottom_toTopOf="@id/v_line"
+  />
+
+  <Button
+          android:id="@+id/btn_contact_list"
+          android:layout_width="0dp"
+          android:layout_height="60dp"
+          android:background="@drawable/button_no_radius"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toStartOf="@id/v_line"
+          android:text="CONTACT"
+          android:textSize="32sp"
+  />
+
+  <View
+          android:id="@+id/v_line"
+          android:layout_height="60dp"
+          android:layout_width="1dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toEndOf="@id/btn_contact_list"
+          app:layout_constraintEnd_toStartOf="@id/btn_my_page"
+  />
+
+  <Button
+          android:id="@+id/btn_my_page"
+          android:layout_width="0dp"
+          android:layout_height="60dp"
+          android:background="@drawable/button_no_radius"
+          app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"/>
+          app:layout_constraintStart_toEndOf="@id/v_line"
+          android:text="MY PAGE"
+          android:textSize="32sp"
+  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
