--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,45 +16,19 @@
           android:background="#123abc"
   />
 
-  <FrameLayout
-          android:id="@+id/frame_layout"
+  <androidx.viewpager2.widget.ViewPager2
+          android:id="@+id/pager"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintTop_toBottomOf="@id/tv_title"
-          app:layout_constraintBottom_toTopOf="@id/v_line"
+          app:layout_constraintBottom_toTopOf="@id/tab_layout"
   />
 
-  <Button
-          android:id="@+id/btn_contact_list"
-          android:layout_width="0dp"
+  <com.google.android.material.tabs.TabLayout
+          android:id="@+id/tab_layout"
+          android:layout_width="match_parent"
           android:layout_height="60dp"
-          android:background="@drawable/button_no_radius"
           app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toStartOf="@id/v_line"
-          android:text="CONTACT"
-          android:textSize="32sp"
-  />
-
-  <View
-          android:id="@+id/v_line"
-          android:layout_height="60dp"
-          android:layout_width="1dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toEndOf="@id/btn_contact_list"
-          app:layout_constraintEnd_toStartOf="@id/btn_my_page"
-  />
-
-  <Button
-          android:id="@+id/btn_my_page"
-          android:layout_width="0dp"
-          android:layout_height="60dp"
-          android:background="@drawable/button_no_radius"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toEndOf="@id/v_line"
-          android:text="MY PAGE"
-          android:textSize="32sp"
   />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
