--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/editImg"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_launcher"
@@ -16,6 +17,7 @@
         app:civ_border_color="@color/white"/>
 
     <EditText
+        android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -27,6 +29,7 @@
         android:inputType="textPersonName"/>
 
     <EditText
+        android:id="@+id/editNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -35,9 +38,10 @@
         android:paddingHorizontal="14dp"
         android:background="@drawable/input_focus_style"
         android:hint="안녕안녕 나는 전화번호야"
-        android:inputType="textPersonName"/>
+        android:inputType="phone"/>
 
     <EditText
+        android:id="@+id/editMail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -46,17 +50,7 @@
         android:paddingHorizontal="14dp"
         android:background="@drawable/input_focus_style"
         android:hint="안녕안녕 나는 이메일이야"
-        android:inputType="textPersonName"/>
+        android:inputType="textEmailAddress"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        android:paddingVertical="14dp"
-        android:paddingHorizontal="14dp"
-        android:background="@drawable/input_focus_style"
-        android:hint="안녕안녕 나는 이벤트야"
-        android:inputType="textPersonName"/>
 
 </LinearLayout>
