--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -5,10 +5,10 @@
              android:layout_height="match_parent"
              tools:context=".ContactList">
 
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
+  <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_contact_list"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:text="@string/hello_blank_fragment"/>
+  />
 
 </FrameLayout>
