--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -82,7 +82,7 @@
                     android:layout_marginTop="10dp"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="전화번호"/>
+                    android:text="나의 전화번호"/>
 
             </androidx.cardview.widget.CardView>
 
@@ -145,7 +145,7 @@
                     android:layout_marginTop="10dp"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="이메일"/>
+                    android:text="나의 이메일"/>
 
             </androidx.cardview.widget.CardView>
 
