--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -219,7 +219,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="20dp"
-        android:text="Mobile"
+        android:text="EMAIL"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/iconItemCardView4"
@@ -233,7 +233,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="6dp"
-        android:text="010-222-3333"
+        android:text="sparta@test.com"
         android:textColor="#716C6C"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/iconItemCardView4"
