--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="20dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="연락처 추가"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/editImg"
@@ -62,6 +73,22 @@
         android:drawablePadding="12dp"
         android:drawableStart="@drawable/ic_dig_mail"
         android:inputType="textEmailAddress"/>
+
+    <Button
+        android:id="@+id/btn_dialog_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="취소하기"/>
+
+    <Button
+        android:id="@+id/btn_dialog_yes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="추가하기"/>
+
+
 
 
 </LinearLayout>
