--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -33,7 +33,7 @@
         android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="20dp"
         android:paddingVertical="14dp"
         android:paddingHorizontal="14dp"
@@ -74,21 +74,37 @@
         android:drawableStart="@drawable/ic_dig_mail"
         android:inputType="textEmailAddress"/>
 
-    <Button
-        android:id="@+id/btn_dialog_no"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="취소하기"/>
+        android:paddingHorizontal="28dp"
+        android:layout_marginTop="20dp">
 
-    <Button
-        android:id="@+id/btn_dialog_yes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="추가하기"/>
+        <Button
+            android:id="@+id/btn_dialog_no"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="안녕안녕 취소"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_dialog_yes" />
+
+        <Button
+            android:id="@+id/btn_dialog_yes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="안녕안녕 추가"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_dialog_no"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
 
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
