--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -40,13 +40,22 @@
             android:layout_height="40dp"
             android:background="@null"
             android:gravity="center"
-            android:text="♥ Monkey Sparta ♥"
+            android:text="Monkey Sparta"
             android:textSize="24sp"
             android:textStyle="normal|bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageView
+            android:id="@+id/ivLike"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="-20dp"
+            android:src="@drawable/heart_filled"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="@+id/textView" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/iconItemCardView1"
@@ -120,7 +129,7 @@
             android:id="@+id/textView4"
             android:layout_width="160dp"
             android:layout_height="40dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="60dp"
             android:gravity="center|start"
             android:text="Sparta Contacts"
             android:textColor="#FFFFFF"
@@ -511,6 +520,16 @@
             app:layout_constraintBottom_toBottomOf="@+id/iconItemCardView9"
             app:layout_constraintStart_toStartOf="@+id/iconItemCardView9"
             app:layout_constraintTop_toBottomOf="@+id/tvBirthday" />
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintTop_toTopOf="@+id/view"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
