Feat:[공통]사용하지 않는 주석 삭제 / [AddFrag.kt]사진 선택기능 추가, 데이터 클래스에 전달 / [Contact.kt]데이터 필드 추가 / [DetailActivity.kt]Uri이미지 사용 가능하도록 내용 보강

--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -22,7 +22,7 @@
             android:id="@+id/iv_contact_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@drawable/warrior_sparta"
     />
   </androidx.cardview.widget.CardView>
@@ -48,5 +48,8 @@
           app:layout_constraintBottom_toBottomOf="parent"
           android:src="@drawable/heart"
   />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
