--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="연락처 추가"
+        android:text="@string/dialog_title"
         android:layout_gravity="center"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -22,12 +22,22 @@
         android:layout_height="170dp"
         android:background="@drawable/profile_bg"
         android:backgroundTint="#EBEDFF"
-        android:src="@drawable/horn_sparta"
+        android:src="@drawable/ic_person"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:elevation="10dp"
         app:civ_border_width="1dp"
         app:civ_border_color="@color/white"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap to \nchange photo!"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        android:textSize="12sp"
+        android:lineSpacingExtra="-4dp"/>
 
     <EditText
         android:id="@+id/editName"
@@ -35,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="20dp"
-        android:paddingVertical="14dp"
+        android:paddingVertical="12dp"
         android:paddingHorizontal="14dp"
         android:background="@drawable/input_focus_style"
         android:hint="@string/dialog_name"
@@ -50,10 +60,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
-        android:paddingVertical="14dp"
+        android:paddingVertical="12dp"
         android:paddingHorizontal="14dp"
         android:background="@drawable/input_focus_style"
-        android:hint="전화번호"
+        android:hint="@string/dialog_num"
         android:textStyle="bold"
         android:drawablePadding="12dp"
         android:drawableStart="@drawable/ic_dig_num"
@@ -65,10 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
-        android:paddingVertical="14dp"
+        android:paddingVertical="12dp"
         android:paddingHorizontal="14dp"
         android:background="@drawable/input_focus_style"
-        android:hint="이메일"
+        android:hint="@string/dialog_mail"
         android:textStyle="bold"
         android:drawablePadding="12dp"
         android:drawableStart="@drawable/ic_dig_mail"
@@ -84,7 +94,7 @@
             android:id="@+id/btn_dialog_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="안녕안녕 취소"
+            android:text="@string/dialog_cancel"
             android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="안녕안녕 추가"
+            android:text="@string/dialog_add"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_dialog_no"
             app:layout_constraintBottom_toBottomOf="parent"
