--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,55 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="80dp" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:paddingTop="8dp"
-        android:paddingEnd="12dp"
-        android:paddingBottom="8dp"
-        android:paddingStart="12dp"
->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="70dp">
 
-  <androidx.cardview.widget.CardView
-          android:id="@+id/cv_contact_icon"
-          android:layout_width="64dp"
-          android:layout_height="64dp"
-          app:cardCornerRadius="32dp"
-          app:cardElevation="0dp"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-  >
-    <ImageView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_contact_icon"
+        android:layout_width="54dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="10dp"
+        app:cardCornerRadius="32dp"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
             android:id="@+id/iv_contact_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/warrior_sparta"
-    />
-  </androidx.cardview.widget.CardView>
+            android:src="@drawable/ic_launcher_foreground" />
+    </androidx.cardview.widget.CardView>
 
-  <TextView
-          android:id="@+id/tv_contact_name"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="CONTACT"
-          android:textSize="24sp"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toEndOf="@id/cv_contact_icon"
-          android:layout_marginStart="12dp"
-  />
+    <TextView
+        android:id="@+id/tv_contact_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="CONTACT"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/cv_contact_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
-  <ImageView
-          android:id="@+id/iv_like"
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintBottom_toBottomOf="parent"
-          android:src="@drawable/heart"
-  />
+    <ImageView
+        android:id="@+id/iv_like"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="18dp"
+        android:src="@drawable/heart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:dividerColor="#D5D5D5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tv_contact_name"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
