--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="20dp">
+    android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:minWidth="350dp"
+        android:paddingBottom="20dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -84,6 +89,97 @@
         android:drawableStart="@drawable/ic_dig_mail"
         android:inputType="textEmailAddress"/>
 
+        <TextView
+            android:id="@+id/viewMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="▽ 더 보기"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            android:gravity="center"
+            android:padding="10dp"
+            android:layout_marginVertical="3dp"/>
+
+        <EditText
+            android:id="@+id/editGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:paddingHorizontal="14dp"
+            android:visibility="gone"
+            android:background="@drawable/input_focus_style"
+            android:hint="그룹"
+            android:textStyle="bold"
+            android:drawablePadding="12dp"
+            android:drawableStart="@drawable/ic_dig_group"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/editAdress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:visibility="gone"
+            android:paddingHorizontal="14dp"
+            android:background="@drawable/input_focus_style"
+            android:hint="주소"
+            android:textStyle="bold"
+            android:drawablePadding="12dp"
+            android:drawableStart="@drawable/ic_dig_adress"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/editBirth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:paddingHorizontal="14dp"
+            android:background="@drawable/input_focus_style"
+            android:hint="생일"
+            android:textStyle="bold"
+            android:drawablePadding="12dp"
+            android:drawableStart="@drawable/ic_dig_birth"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/editEvent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            android:layout_marginHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:paddingHorizontal="14dp"
+            android:background="@drawable/input_focus_style"
+            android:hint="일정"
+            android:textStyle="bold"
+            android:drawablePadding="12dp"
+            android:drawableStart="@drawable/ic_dig_event"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/editMemo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:visibility="gone"
+            android:paddingVertical="12dp"
+            android:paddingHorizontal="14dp"
+            android:background="@drawable/input_focus_style"
+            android:hint="메모"
+            android:textStyle="bold"
+            android:drawablePadding="12dp"
+            android:drawableStart="@drawable/ic_dig_memo"
+            android:inputType="textEmailAddress"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -116,5 +212,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-</LinearLayout>
+</ScrollView>
