Feat:shrink Dialog view size when open soft-keyboard

--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -93,7 +93,7 @@
             android:id="@+id/viewMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="▽ 더 보기"
+            android:text="@string/dialog_more"
             android:layout_gravity="center"
             android:visibility="visible"
             android:gravity="center"
@@ -110,7 +110,7 @@
             android:paddingHorizontal="14dp"
             android:visibility="gone"
             android:background="@drawable/input_focus_style"
-            android:hint="그룹"
+            android:hint="@string/dialog_group"
             android:textStyle="bold"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_dig_group"
@@ -126,10 +126,10 @@
             android:visibility="gone"
             android:paddingHorizontal="14dp"
             android:background="@drawable/input_focus_style"
-            android:hint="주소"
+            android:hint="@string/dialog_address"
             android:textStyle="bold"
             android:drawablePadding="12dp"
-            android:drawableStart="@drawable/ic_dig_adress"
+            android:drawableStart="@drawable/ic_dig_address"
             android:inputType="textEmailAddress"/>
 
         <EditText
@@ -142,7 +142,7 @@
             android:paddingVertical="12dp"
             android:paddingHorizontal="14dp"
             android:background="@drawable/input_focus_style"
-            android:hint="생일"
+            android:hint="@string/dialog_birth"
             android:textStyle="bold"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_dig_birth"
@@ -158,7 +158,7 @@
             android:paddingVertical="12dp"
             android:paddingHorizontal="14dp"
             android:background="@drawable/input_focus_style"
-            android:hint="일정"
+            android:hint="@string/dialog_event"
             android:textStyle="bold"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_dig_event"
@@ -174,7 +174,7 @@
             android:paddingVertical="12dp"
             android:paddingHorizontal="14dp"
             android:background="@drawable/input_focus_style"
-            android:hint="메모"
+            android:hint="@string/dialog_memo"
             android:textStyle="bold"
             android:drawablePadding="12dp"
             android:drawableStart="@drawable/ic_dig_memo"
