--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -39,7 +39,7 @@
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_marginEnd="18dp"
-        android:src="@drawable/heart"
+        android:src="@drawable/ic_heart_outlined"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
