--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,7 +15,7 @@
         <View
             android:id="@+id/view"
             android:layout_width="411dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:background="#F4511E"
             android:backgroundTint="#E10846"
             android:backgroundTintMode="src_atop"
@@ -25,12 +25,12 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="9dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="-3dp"
             app:layout_constraintBottom_toBottomOf="@id/view"
-            app:layout_constraintStart_toStartOf="@id/view"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/view"
             app:srcCompat="@android:drawable/ic_menu_revert" />
 
